# feedback-bot

./: LICENSE  README.md  pyproject.toml
data/replies/: help.md  start.md
docker/: Dockerfile
feedback_bot/: bot.py  command_replies.py  config.py  main.py  retry.py
